design in progress

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "materialize";
+ @import 'https://fonts.googleapis.com/css?family=Arizonia';
+ @import 'https://fonts.googleapis.com/css?family=Raleway';
+ @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
+ .parallax-container {
+   height: 100vh;
+ }
+
+ body, p, a{
+   font-family: 'Raleway', sans-serif;
+ }
