add geocoder create business-category relationship

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="input-field col m6">
-      <%= f.collection_select :category, Category.all, :id, :name, placeholder: "Select a Category" %>
+      <%= f.collection_select :category_id, Category.all, :id, :name, placeholder: "Select a Category" %>
     </div>
 
     <div class="input-field col m12">
